--- a/lib/mockos/CMakeLists.txt
+++ b/lib/mockos/CMakeLists.txt
@@ -5,6 +5,6 @@
 file(GLOB headers "${mockos_SOURCE_DIR}/include/mockos/*.h")
 file(GLOB sources "${mockos_SOURCE_DIR}/lib/mockos/*.cpp")
 
-add_library(mockos ${headers} ${sources})
+add_library(mockos ${headers} ${sources} EditDisplay.cpp)
 target_include_directories(mockos PUBLIC ${mockos_SOURCE_DIR}/include)
 target_compile_features(mockos PUBLIC cxx_std_14)
